fixed add org button disabled

--- a/package.json
+++ b/package.json
@@ -12,15 +12,23 @@
     "history": "^4.10.1",
     "mdbootstrap": "^4.15.0",
     "react": "^16.13.1",
+    "react-beautiful-dnd": "^13.1.0",
+    "react-color": "^2.19.3",
+    "react-datepicker": "^4.2.1",
     "react-dom": "^16.13.1",
+    "react-modal": "^3.14.3",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-select": "^5.1.0",
+    "react-spinners": "^0.11.0",
+    "react-toastify": "^8.0.3",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "yarn": "^1.22.17"
   },
   "scripts": {
     "start": "react-scripts start",
