--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-color": "^2.19.3",
     "react-datepicker": "^4.2.1",
     "react-dom": "^16.13.1",
+    "react-icons": "^4.4.0",
     "react-modal": "^3.14.3",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
