--- a/src/components/QuestionConfigure/ConfigureQuestions.config.json
+++ b/src/components/QuestionConfigure/ConfigureQuestions.config.json
@@ -1,5 +1,58 @@
 {
     "Questions": [
+        {
+            "question_id": 0,
+            "question": "Client Code",
+            "description": "",
+            "field_type": "1",
+            "answer_type": "NUMBER",
+            "suggested_answers": [""],
+            "suggested_jump": [""],
+            "validation1": "100",
+            "validation2": "99999",
+            "error_msg": "Should be range between 100 - 99999",
+            "re_type": "no",
+            "is_to_be_mask": "no",
+            "related": "no",
+            "required": "yes",
+            "flag": "0"
+        },
+        {
+            "question_id": 1,
+            "question": "First Name",
+            "description": "",
+            "field_type": "1",
+            "answer_type": "TEXT",
+            "suggested_answers": [""],
+            "suggested_jump": [""],
+            "validation1": "Contains",
+            "validation2": "Both",
+            "error_msg": "Should not contain special characters",
+            "re_type": "no",
+            "is_to_be_mask": "no",
+            "related": "no",
+            "required": "yes",
+            "flag": "0"
+        },
+        {
+            "question_id": 2,
+            "question": "Last Name",
+            "description": "",
+            "field_type": "1",
+            "answer_type": "TEXT",
+            "suggested_answers": [""],
+            "suggested_jump": [""],
+            "validation1": "Contains",
+            "validation2": "Both",
+            "error_msg": "Should not contain special characters",
+            "re_type": "no",
+            "is_to_be_mask": "no",
+            "related": "no",
+            "required": "yes",
+            "flag": "0"
+        }
+    ],
+    "LastQuestions": [
     {
         "question_id": 0,
         "question": "Referral Status",
@@ -179,6 +232,190 @@
             "description": "",
             "field_type": "1",
             "answer_type": "DATE",
+            "suggested_answers": [],
+            "suggested_jump": [],
+            "validation1": "",
+            "validation2": "",
+            "error_msg": "",
+            "re_type": "",
+            "is_to_be_mask": "",
+            "related": "no",
+            "required": "yes",
+            "flag": "0"
+        }
+    ]
+},
+"FosterCareDemographics" : {
+    "section": "Demographics",
+    "section_id": 0,
+    "related": "false",
+    "questions": [
+        {
+            "question_id": 0,
+            "question": "Identification Number",
+            "description": "",
+            "field_type": "1",
+            "answer_type": "TEXT",
+            "suggested_answers": [],
+            "suggested_jump": [],
+            "validation1": "Contains",
+            "validation2": "Both",
+            "error_msg": "Identification Number must contain a minimum of 9 characters to include any combination of letters, numbers and special characters (_@./-).",
+            "re_type": "no",
+            "is_to_be_mask": "no",
+            "related": "no",
+            "required": "yes",
+            "flag": "0"
+        },
+        {
+            "question_id": 1,
+            "question": "First Name",
+            "description": "",
+            "field_type": "1",
+            "answer_type": "TEXT",
+            "suggested_answers": [""],
+            "suggested_jump": [""],
+            "validation1": "Contains",
+            "validation2": "Both",
+            "error_msg": "Should not contain special characters",
+            "re_type": "no",
+            "is_to_be_mask": "no",
+            "related": "no",
+            "required": "yes",
+            "flag": "0"
+        },
+        {
+            "question_id": 2,
+            "question": "Last Name",
+            "description": "",
+            "field_type": "1",
+            "answer_type": "TEXT",
+            "suggested_answers": [""],
+            "suggested_jump": [""],
+            "validation1": "Contains",
+            "validation2": "Both",
+            "error_msg": "Should not contain special characters",
+            "re_type": "no",
+            "is_to_be_mask": "no",
+            "related": "no",
+            "required": "yes",
+            "flag": "0"
+        },
+        {
+            "question_id": 3,
+            "question": "Referral Source",
+            "description": "",
+            "field_type": "1",
+            "answer_type": "TEXT",
+            "suggested_answers": [],
+            "suggested_jump": [],
+            "validation1": "",
+            "validation2": "",
+            "error_msg": "",
+            "re_type": "",
+            "is_to_be_mask": "",
+            "related": "no",
+            "required": "yes",
+            "flag": "0"
+        }
+    ]
+},
+"FosterCareFamilyDemographics" : {
+    "section": "Demographics",
+    "section_id": 0,
+    "related": "false",
+    "questions": [
+        {
+            "question_id": 0,
+            "question": "Identification Number",
+            "description": "",
+            "field_type": "1",
+            "answer_type": "TEXT",
+            "suggested_answers": [],
+            "suggested_jump": [],
+            "validation1": "Contains",
+            "validation2": "Both",
+            "error_msg": "Identification Number must contain a minimum of 9 characters to include any combination of letters, numbers and special characters (_@./-).",
+            "re_type": "no",
+            "is_to_be_mask": "no",
+            "related": "no",
+            "required": "yes",
+            "flag": "0"
+        },
+        {
+            "question_id": 1,
+            "question": "First Name",
+            "description": "",
+            "field_type": "1",
+            "answer_type": "TEXT",
+            "suggested_answers": [""],
+            "suggested_jump": [""],
+            "validation1": "Contains",
+            "validation2": "Both",
+            "error_msg": "Should not contain special characters",
+            "re_type": "no",
+            "is_to_be_mask": "no",
+            "related": "no",
+            "required": "yes",
+            "flag": "0"
+        },
+        {
+            "question_id": 2,
+            "question": "Last Name",
+            "description": "",
+            "field_type": "1",
+            "answer_type": "TEXT",
+            "suggested_answers": [""],
+            "suggested_jump": [""],
+            "validation1": "Contains",
+            "validation2": "Both",
+            "error_msg": "Should not contain special characters",
+            "re_type": "no",
+            "is_to_be_mask": "no",
+            "related": "no",
+            "required": "yes",
+            "flag": "0"
+        },
+        {
+            "question_id": 3,
+            "question": "Status",
+            "description": "",
+            "field_type": "1",
+            "answer_type": "TEXT",
+            "suggested_answers": [],
+            "suggested_jump": [],
+            "validation1": "",
+            "validation2": "",
+            "error_msg": "",
+            "re_type": "",
+            "is_to_be_mask": "",
+            "related": "no",
+            "required": "yes",
+            "flag": "0"
+        },
+        {
+            "question_id": 4,
+            "question": "County",
+            "description": "",
+            "field_type": "1",
+            "answer_type": "TEXT",
+            "suggested_answers": [],
+            "suggested_jump": [],
+            "validation1": "",
+            "validation2": "",
+            "error_msg": "",
+            "re_type": "",
+            "is_to_be_mask": "",
+            "related": "no",
+            "required": "yes",
+            "flag": "0"
+        },
+        {
+            "question_id": 5,
+            "question": "Agency Region",
+            "description": "",
+            "field_type": "1",
+            "answer_type": "TEXT",
             "suggested_answers": [],
             "suggested_jump": [],
             "validation1": "",
